test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_BUNCPS_0_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_BUNCPS_0_expected.soar
================================================================================

sp {answer*condition-match*elaborate*results*StateNoChange*t3-1
    (state <s1> ^superstate nil ^condition <c1> ^topstate <s2>)
    (<c1> ^name <c3> ^name { << red blue >> <c2> })
    (<s2> ^object <n1>)
    (<n1> ^linguistic-desc <d1>)
    (<d1> ^word <c3>)
    -->
    (<s2> ^result <o1> +)
    (<o1> ^object <n1> +)
}




--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (string)))
      (attrValueTests
        (string)
        (valueTest
          (variable)))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable)))
      (attrValueTests
        (string)
        (valueTest
          (conjunctiveTest
            (disjunctionTest
              (string)
              (string))
            (variable)))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (unaryPreference))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (unaryPreference))))))
