test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_BUNCPS_2_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_BUNCPS_2_expected.soar
================================================================================

sp {answer*justification-1*snc*t5-1
    (state <s1> ^superstate nil)
    (<s1> ^topstate <s2>)
    (<s1> ^condition <c2>)
    (<c2> ^arg <a1>)
    (<a1> ^result <n1>)
    (<c2> ^name { <> foo <c1> })
    (<n1> ^type <c1>)
    -->
    (<s2> ^result <o1> +)
    (<o1> ^object <n1> +)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (string)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (conjunctiveTest
            (relationalTest
              (relation)
              (singleTest
                (string)))
            (singleTest
              (variable))))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (preferenceSpecifier
            (unaryPreference)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (preferenceSpecifier
            (unaryPreference)))))))
