test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_BUNCPS_5_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_BUNCPS_5_expected.soar
================================================================================

sp {answer*chunk*condition-match*elaborate*matching-argument-object*snc*t4-1
    (state <s1> ^superstate nil)
    (<s1> ^topstate <s2>)
    (<s1> ^condition <c3>)
    (<c3> ^arg <a1>)
    (<a1> ^result <n1>)
    (<c3> ^name <c1>)
    (<n1> ^<c1> <c2>)
    -->
    (<s2> ^result <r1> +)
    (<r1> ^<r2> <c2> +)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (string)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (variable))
        (valueTest
          (singleTest
            (variable)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (preferenceSpecifier
            (unaryPreference)))))
    (variableMutation
      (variable)
      (attrValueMake
        (variable)
        (valueMake
          (variable)
          (preferenceSpecifier
            (unaryPreference)))))))
