test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_BUNCPS_6_Four_Level_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_BUNCPS_6_Four_Level_expected.soar
================================================================================

sp {answer*chunk-multi*make-chunk-apply-level3*snc*t4-2
    (state <s1> ^superstate nil)
    (<s1> ^attr2 <c3>)
    (<s1> ^attr1 <c2>)
    (<s1> ^attr1 <c1>)
    -->
    (<s1> ^top-resulta level3 +)
    (<s1> ^top-resultb <c3> +)
}

sp {answer*chunk*make-chunk-apply-level3*snc*t4-1
    (state <s1> ^superstate <s2>)
    (<s2> ^superstate nil)
    (<s2> ^attr2 <c1>)
    (<s2> ^attr1 <c3>)
    (<s2> ^attr1 <c2>)
    -->
    (<s2> ^top-resulta level3 +)
    (<s2> ^top-resultb <c1> +)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (string)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string)
          (unaryPreference))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (unaryPreference)))))
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (string)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string)
          (unaryPreference))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (unaryPreference))))))
