test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_BUNCPS_7_with_Constraints_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_BUNCPS_7_with_Constraints_expected.soar
================================================================================

sp {answer*chunk*condition-match*elaborate*matching-argument-object*snc*t4-1
    (state <s1> ^superstate nil)
    (<s1> ^topstate <s2>)
    (<s1> ^condition <c2>)
    (<c2> ^arg <a1>)
    (<a1> ^result <n1>)
    (<n1> ^value <c1>)
    (<c2> ^name { >= valuation <> 2 <c3> })
    -->
    (<s2> ^result <r1> +)
    (<r1> ^<r2> <c1> +)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (string))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (conjunctiveTest
            (relationalTest
              (relation)
              (string))
            (relationalTest
              (relation)
              (string))
            (variable)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (unaryPreference))))
    (variableMutation
      (variable)
      (attrValueMake
        (variable)
        (valueMake
          (variable)
          (unaryPreference))))))
