test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_Justifications_Get_New_Identities_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_Justifications_Get_New_Identities_expected.soar
================================================================================

sp {answer*make-chunk-level2*StateNoChange*t4-1
    (state <s1> ^superstate nil ^data <d1> ^data <d2>)
    (<d1> ^attr1 foo ^attr2 <c1>)
    (<d2> ^attr2 <c3> ^attr1 { > ZZZ <c2> })
    -->
    (<s1> ^result true +)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (string))))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable))))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (string))))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable)))))
    (condsForOneId
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (variable))))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (conjunctiveTest
            (relationalTest
              (relation)
              (singleTest
                (string)))
            (singleTest
              (variable))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string)
          (preferenceSpecifier
            (unaryPreference)))))))
