test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_Literalization_Simple_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_Literalization_Simple_expected.soar
================================================================================

sp {answer*chunk*make-chunk2*snc*t2-1
    (state <s1> ^foo bar ^word object ^superstate nil ^foo <c2> ^word <c1>)
    -->
    (<s1> ^result object + ^result2 bar +)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (string))))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (string))))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (string))))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (variable))))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (variable)))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string)
          (preferenceSpecifier
            (unaryPreference))))
      (attrValueMake
        (string)
        (valueMake
          (string)
          (preferenceSpecifier
            (unaryPreference)))))))
