test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_Literalization_of_NC_and_NCC_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_Literalization_of_NC_and_NCC_expected.soar
================================================================================

sp {answer*chunk*make-chunk*snc*t2-1
    (state <s1> ^word object)
    (<s1> -^prefix object)
   -{ (<s1> ^suffix object)
      (<s1> ^word { <> object <fantasy-object> })}
    (<s1> ^superstate nil)
    -->
    (<s1> ^result object +)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (LHS
      (cond
        (positiveCond
          (condsForOneId
            (condType)
            (idTest
              (test
                (simpleTest
                  (singleTest
                    (variable)))))
            (attrValueTests
              (attrTest
                (test
                  (simpleTest
                    (singleTest
                      (constant
                        (symConstant
                          (string)))))))
              (valueTest
                (test
                  (simpleTest
                    (singleTest
                      (constant
                        (symConstant
                          (string)))))))))))
      (cond
        (positiveCond
          (condsForOneId
            (idTest
              (test
                (simpleTest
                  (singleTest
                    (variable)))))
            (attrValueTests
              (attrTest
                (test
                  (simpleTest
                    (singleTest
                      (constant
                        (symConstant
                          (string)))))))
              (valueTest
                (test
                  (simpleTest
                    (singleTest
                      (constant
                        (symConstant
                          (string)))))))))))
      (cond
        (negativeCond
          (positiveCond
            (conjunctiveCond
              (cond
                (positiveCond
                  (condsForOneId
                    (idTest
                      (test
                        (simpleTest
                          (singleTest
                            (variable)))))
                    (attrValueTests
                      (attrTest
                        (test
                          (simpleTest
                            (singleTest
                              (constant
                                (symConstant
                                  (string)))))))
                      (valueTest
                        (test
                          (simpleTest
                            (singleTest
                              (constant
                                (symConstant
                                  (string)))))))))))
              (cond
                (positiveCond
                  (condsForOneId
                    (idTest
                      (test
                        (simpleTest
                          (singleTest
                            (variable)))))
                    (attrValueTests
                      (attrTest
                        (test
                          (simpleTest
                            (singleTest
                              (constant
                                (symConstant
                                  (string)))))))
                      (valueTest
                        (test
                          (conjunctiveTest
                            (simpleTest
                              (relationalTest
                                (relation)
                                (singleTest
                                  (constant
                                    (symConstant
                                      (string))))))
                            (simpleTest
                              (singleTest
                                (variable))))))))))))))
      (cond
        (positiveCond
          (condsForOneId
            (idTest
              (test
                (simpleTest
                  (singleTest
                    (variable)))))
            (attrValueTests
              (attrTest
                (test
                  (simpleTest
                    (singleTest
                      (constant
                        (symConstant
                          (string)))))))
              (valueTest
                (test
                  (simpleTest
                    (singleTest
                      (constant
                        (symConstant
                          (string))))))))))))
    (action
      (variable)
      (attrValueMake
        (rhsValue
          (constant
            (symConstant
              (string))))
        (valueMake
          (rhsValue
            (constant
              (symConstant
                (string))))
          (preferenceSpecifier
            (unaryPreference)))))))
