test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_Literalization_with_BT_Constraints_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_Literalization_with_BT_Constraints_expected.soar
================================================================================

sp {answer*chunk*start-chunking2*snc*t2-1
    (state <s1> ^word object)
    (<s1> ^superstate nil)
    (<s1> ^word2 { <> object <> ungrounded <c2> })
    (<s1> ^word { <> ungrounded <c1> })
    -->
    (<s1> ^result object +)
    (<s1> ^result2 ungrounded +)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))))))
    (cond
      (positiveCond
        (condsForOneId
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))))))
    (cond
      (positiveCond
        (condsForOneId
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (conjunctiveTest
                  (simpleTest
                    (relationalTest
                      (relation)
                      (singleTest
                        (string))))
                  (simpleTest
                    (relationalTest
                      (relation)
                      (singleTest
                        (string))))
                  (simpleTest
                    (singleTest
                      (variable))))))))))
    (cond
      (positiveCond
        (condsForOneId
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (conjunctiveTest
                  (simpleTest
                    (relationalTest
                      (relation)
                      (singleTest
                        (string))))
                  (simpleTest
                    (singleTest
                      (variable))))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string)
          (preferenceSpecifier
            (unaryPreference)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string)
          (preferenceSpecifier
            (unaryPreference)))))))
