test/corpus/18-csoar-test-agents/Chunking/expected/ChunkingTests_NCC_Complex_expected.soar.txt
================================================================================
UnitTests/SoarTestAgents/Chunking/expected/ChunkingTests_NCC_Complex_expected.soar
================================================================================

sp {answer*apply24*onc*t3-1
    (state <s1> ^superstate nil)
    (<s1> ^test-item2 <c2>)
    (<s1> ^test-item { > <c2> <> <c2> <c1> })
   -{ (<s1> ^bar <c1>)
      (<s1> ^foo { > <c1> > <c2> <max> })
      (<s1> ^test-item3 <max>)}
    -->
    (<s1> ^highest <c1> +)
    (<s1> ^second-highest <c2> +)
    (<s1> ^unbound <m1> +)
    (<s1> ^test-done 1 +)
}



--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (string))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (condsForOneId
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (conjunctiveTest
            (relationalTest
              (relation)
              (variable))
            (relationalTest
              (relation)
              (variable))
            (variable)))))
    (negativeCond
      (conjunctiveCond
        (condsForOneId
          (idTest
            (variable))
          (attrValueTests
            (string)
            (valueTest
              (variable))))
        (condsForOneId
          (idTest
            (variable))
          (attrValueTests
            (string)
            (valueTest
              (conjunctiveTest
                (relationalTest
                  (relation)
                  (variable))
                (relationalTest
                  (relation)
                  (variable))
                (variable)))))
        (condsForOneId
          (idTest
            (variable))
          (attrValueTests
            (string)
            (valueTest
              (variable))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (unaryPreference))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (unaryPreference))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable)
          (unaryPreference))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string)
          (unaryPreference))))))
